# spindle

./: .gitignore  .mailmap  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-NOTICES.md  METHODOLOGY.md  PHASE-0-SPEC.md  README.md  SPINDLE_PHASE4_GAP_REPORT.md  _gen_names.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  spindle-performance-plan.md
Logo/: a4780f58-5bf2-47ed-9f43-23ed742d0b1a_1_720_N.mov
benchmarks/: baseline-v2.2.11.json  baseline-v2.3.0.json
changelog/: index.html
docs/: changelog.md  index.md
domains/: index.html
examples/: README.md  quickstart.py
notebooks/: fabric-manifest.json  spindle_spark_worker.ipynb
pack_output/: 20260425_211412_retail_fabric_demo_s42_manifest.json  20260425_211527_retail_fabric_demo_s42_manifest.json
pack_output_drift/: 20260425_211527_retail_fabric_demo_s99_manifest.json
pack_output_hc/: 20260425_211527_healthcare_fabric_demo_s42_manifest.json
pack_output_stream/: 20260425_211527_retail_fabric_demo_s42_manifest.json  orders_order_created.jsonl  returns_return_initiated.jsonl
scripts/: build_address_data.py  fabric_integration_sweep.py  gen_ref_pages.py  notebook_validation_runner.py  scale_benchmark.py  smoke_test_domains.py  smoke_test_failed.py  smoke_test_parallel.py
search/: search_index.json
spindle_output/: address.parquet  customer.parquet  order.parquet  order_line.parquet  product.parquet  product_category.parquet  promotion.parquet  return.parquet  store.parquet
sqllocks_spindle/: __init__.py  cli.py  mcp_bridge.py  mcp_bridge_server.py  observability.py
tests/: benchmark_generation.py  test_acceptance.py  test_advanced_profiler.py  test_adventureworks_integration.py  test_anchor_api.py  test_anomaly.py  test_capital_markets.py  test_cdm_mapper.py  test_chaos_billion.py  test_chaos_config.py  test_chaos_engine.py  test_clickstream_patterns.py  test_comparator.py  test_composite_domain.py  test_composite_presets.py  test_correlation.py  test_credentials.py  test_ddl_parser.py  test_delta_writer.py  test_demo_catalog.py  test_demo_connections.py  test_demo_inference_mode.py  test_demo_manifest.py  test_demo_mcp_commands.py  test_demo_orchestrator.py  test_demo_params.py  test_demo_seeding_v2.py  test_e2e_chaos_integration.py  test_e2e_chunked_billion.py  test_e2e_cli.py  test_e2e_composites.py  test_e2e_generation.py  (+86 more)
(+767 files in other folders)
